Allow entire library directories to be specified in the classpath file, instead of having to list them explicitely
git-svn-id: https://svn.apache.org/repos/asf/cocoon/trunk@25759 13f79535-47bb-0310-9956-ffa450edef68